k8s/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: metropolis
  labels:
    app: metropolis
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: metropolis
    component: frontend
